<resources>
    <string name="app_name">Android_ShopListProduct</string>
    <string name="create_list_product_button">Создать свой список продуктов магазина</string>
    <string name="hint_name_product_text_view">Название</string>
    <string name="hint_price_text_view">цена</string>
    <string name="save_btn">Добавить</string>
    <string name="name_priduct_edit_text">Название продукта</string>
    <string name="exit">Выход</string>
    <string name="hint_price_edit_text">Цена продукта</string>
    <string name="hint_product_description_edit_text">Описание продукта</string>
    <string name="name_text_save_button">Сохранить</string>
    <string name="menu_text_back">Назад</string>
</resources>