<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ShopListProductActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbarMain"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:title="Магазин"
        app:titleTextColor="@color/white"
        android:background="@color/mediumPurple"
        tools:ignore="MissingConstraints" />

    <LinearLayout
        android:id="@+id/layout_fields"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbarMain"
        app:layout_constraintVertical_bias="0.1">

        <ImageView
            android:id="@+id/mainImageViewIV"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:src="@drawable/ic_unknown_product"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <EditText
                android:id="@+id/nameProductET"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/hint_name_product_text_view"
                android:textSize="20dp"
                android:paddingLeft="24dp"
                android:paddingRight="12dp"/>

            <EditText
                android:id="@+id/priceProductET"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/hint_price_text_view"
                android:textSize="24dp"
                android:paddingRight="24dp"
                android:paddingLeft="12dp"/>

        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/saveBTN"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save_btn"
        android:textSize="22dp"
        android:backgroundTint="@color/mediumPurple"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layout_fields"
        app:layout_constraintVertical_bias="0.063" />

    <ListView
        android:id="@+id/listViewLV"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@+id/saveBTN"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:listitem="@layout/list_item" />


</androidx.constraintlayout.widget.ConstraintLayout>